--- a/Misha/main.css
+++ b/Misha/main.css
@@ -6,39 +6,28 @@
 * {
     margin: 0;
     padding: 0;
+
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
     height: 2000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header {
-
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 100px;
-    width: auto;
-
+    justify-content: center;
 }
 
-.logo_lable {
-    color: black;
-    font-size: 20px;
-    font-family: Montserrat;
-    font-weight: bold;
-    word-wrap: break-word;
-    text-decoration: none;
-    margin-left: -3%;
-}
 
-.logo {
-    margin-left: 5%;
-}
-
-.logo img {
-    width: 150px;
-    height: auto;
+header span:not(:nth-child(2)) {
+    margin-left: 17%;
 }
 
 header a {
@@ -49,26 +38,50 @@ header a {
     word-wrap: break-word;
     text-decoration: none;
     padding: 10px;
+    margin-left: 20px;
+}
+
+header span:nth-child(2) a {
+    color: black;
+    font-size: 20px;
+    font-family: Montserrat;
+    font-weight: bold;
+    word-wrap: break-word;
+    text-decoration: none;
+    margin-left: -25px;
 }
 
 nav {
-    margin: 0 15% 0 10%;
-}
-
-.prof {
-    margin-right: 9%;
-}
-
-header {
-    background-color: white;
+    height: 100px;
+    width: 1300px;
+    display: flex;
+    align-items: center;
 }
 
 nav a {
-    margin-left: 50px;
+    padding: 10px;
 }
 
-.prof a {
-    margin-left: 20px;
+
+header div {
+    display: inline-block;
+    align-items: center;
+}
+
+header div a {
+    text-align: center;
+}
+
+header a:hover {
+    background-color: grey;
+    border-radius: 15px;
+    color: white;
+
+}
+
+.logo img {
+    width: 150px;
+    height: auto;
 }
 
 
@@ -83,33 +96,6 @@ nav a {
     border-radius: 30px;
 }
 
-.brand {
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-}
-
-.b_rand {
-    background-color: #fac28e;
-    width: 1300px;
-    height: 186px;
-    display: flex;
-    align-items: center;
-}
-
-header a:hover {
-    background-color: grey;
-    border-radius: 15px;
-    color: white;
-
-}
-
-.New_art {
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-
-}
 
 .NEW {
     width: 1300px;
@@ -125,7 +111,6 @@ header a:hover {
     font-style: normal;
     font-weight: 900;
     line-height: 50px;
-    /* 104.167% */
     letter-spacing: 2.88px;
 }
 
@@ -138,6 +123,7 @@ footer .inf {
     display: grid;
     grid-template-columns: 300px 900px;
     grid-gap: 20px;
+    margin-top: 20px;
 }
 
 footer {
@@ -147,41 +133,48 @@ footer {
     font-weight: bold;
     word-wrap: break-word;
     text-decoration: none;
-    padding: 10px;
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
 }
 
-footer div{
-    display:inline-block ;
-} 
+.brand {
+    margin-top: 30px;
+}
+
+.b_rand {
+    background-color: #fac28e;
+    width: 1300px;
+    height: 186px;
+    display: flex;
+    align-items: center;
+}
 
 #About_us {
-margin-top: 30px;
-text-align: justify;
+    margin-top: 30px;
 }
 
 
 .Contact {
-margin: 30px 0px 0px 20px;
+    margin: 30px 0px 0px 20px;
 }
-footer a{
+
+footer a {
     text-decoration: none;
     color: white;
 }
-footer a:hover{
+
+footer a:hover {
     text-decoration: none;
     color: gray;
 }
 
-footer img {
-width: 50px;    
+footer .meseg img {
+    width: 50px;
 
 }
-.meseg{
+
+.meseg {
     margin-top: 50px;
 }
-.Contact p:not(:first-child){
-padding-top: 15px;
+
+.Contact p:not(:first-child) {
+    padding-top: 15px;
 }
