--- a/Misha/main.css
+++ b/Misha/main.css
@@ -1,88 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@200&family=Raleway:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@200;500&family=Raleway:wght@300&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-
-}
-
-a {
-    text-decoration: none;
-}
-
-body {
-    height: 2000px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-header {
-    display: flex;
-    justify-content: center;
-}
-
-
-header span:not(:nth-child(2)) {
-    margin-left: 17%;
-}
-
-header a {
-    color: black;
-    font-size: 20px;
-    font-family: Montserrat;
-    font-weight: bold;
-    word-wrap: break-word;
-    text-decoration: none;
-    padding: 10px;
-    margin-left: 20px;
-}
-
-header span:nth-child(2) a {
-    color: black;
-    font-size: 20px;
-    font-family: Montserrat;
-    font-weight: bold;
-    word-wrap: break-word;
-    text-decoration: none;
-    margin-left: -25px;
-}
-
-nav {
-    height: 100px;
-    width: 1300px;
-    display: flex;
-    align-items: center;
-}
-
-nav a {
-    padding: 10px;
-}
-
-
-header div {
-    display: inline-block;
-    align-items: center;
-}
-
-header div a {
-    text-align: center;
-}
-
-header a:hover {
-    background-color: grey;
-    border-radius: 15px;
-    color: white;
-
-}
-
-.logo img {
-    width: 150px;
-    height: auto;
-}
 
 
 .welcome {
@@ -101,80 +16,31 @@ header a:hover {
     width: 1300px;
     height: 650px;
     background-color: #e8e8e8;
+    margin-top: 25px;
+    
 }
 
 .NEW h2 {
-    margin-top: 25px;
+    padding: 25px 0px 0px 30px ;
     color: #000;
-    font-family: Poppins;
+    font-family: Raleway;
     font-size: 48px;
     font-style: normal;
-    font-weight: 900;
-    line-height: 50px;
-    letter-spacing: 2.88px;
+    letter-spacing: 10px;
+    
+
 }
-
-
-
-footer .inf {
-    height: 300px;
-    background-color: #000;
+.NEW img{
+    height: 400px;
+    
+}
+.NEW div{
+    margin: 50px 0px 0px 30px;
     width: 1300px;
-    display: grid;
-    grid-template-columns: 300px 900px;
-    grid-gap: 20px;
-    margin-top: 20px;
+    height: 500px;
+}
+.NEW img:hover{
+background-color: rgb(255, 255, 255);
+border-radius: 5px;
 }
 
-footer {
-    color: white;
-    font-size: 20px;
-    font-family: Montserrat;
-    font-weight: bold;
-    word-wrap: break-word;
-    text-decoration: none;
-}
-
-.brand {
-    margin-top: 30px;
-}
-
-.b_rand {
-    background-color: #fac28e;
-    width: 1300px;
-    height: 186px;
-    display: flex;
-    align-items: center;
-}
-
-#About_us {
-    margin-top: 30px;
-}
-
-
-.Contact {
-    margin: 30px 0px 0px 20px;
-}
-
-footer a {
-    text-decoration: none;
-    color: white;
-}
-
-footer a:hover {
-    text-decoration: none;
-    color: gray;
-}
-
-footer .meseg img {
-    width: 50px;
-
-}
-
-.meseg {
-    margin-top: 50px;
-}
-
-.Contact p:not(:first-child) {
-    padding-top: 15px;
-}
