--- a/Misha/css/all.css
+++ b/Misha/css/all.css
@@ -1,5 +1,3 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@200&family=Raleway:wght@300&display=swap');
@@ -51,6 +49,7 @@ header span:nth-child(2) a {
     text-decoration: none;
     margin-left: -25px;
 }
+
 header span:nth-child(2) a:hover {
     color: rgb(255, 255, 255);
     font-size: 20px;
@@ -60,6 +59,7 @@ header span:nth-child(2) a:hover {
     text-decoration: none;
     margin-left: -25px;
 }
+
 nav {
     height: 100px;
     width: 1300px;
@@ -93,7 +93,7 @@ header a:hover {
 
 footer .inf {
     height: 300px;
-    background-color: #000;
+    background-color: #010522;
     width: 1300px;
     display: grid;
     grid-template-columns: 300px 900px;
@@ -117,14 +117,27 @@ footer {
 .b_rand {
     background-color: #fac28e;
     width: 1300px;
-    height: 186px;
+    height: 200px;
     display: flex;
-    align-items: center;
+    align-items: end;
 }
-.b_rand a:first-child{
+
+.b_rand a {
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.b_rand a img {
+    width: 75%;
+
+
+}
+
+.b_rand a:first-child {
     margin-left: 10px;
 }
-.b_rand a:last-child{
+
+.b_rand a:last-child {
     margin-right: 10px;
 }
 
