--- a/main/css/reg.css
+++ b/main/css/reg.css
@@ -1,18 +1,20 @@
-/* Общие стили */
-
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   margin: 0;
   padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 300;
+}
+
+header {
+  margin-bottom: 100px;
 }
 
 .registration-form {
-  background-color: #fff;
+  background-color: #e8e8e8;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
@@ -22,10 +24,8 @@ body {
 }
 
 h1 {
-  color: #333;
+  color: #000;
 }
-
-/* Стили для формы */
 
 form {
   display: flex;
@@ -39,23 +39,26 @@ label {
 
 input {
   padding: 10px;
-  margin-top: 5px;
-  border: 1px solid #ccc;
+  margin: 5px 0;
+  border: 1px solid #e8e8e8;
   border-radius: 4px;
-  width: 100%;
 }
 
 button {
   background-color: #007bff;
   color: #fff;
   padding: 10px;
+  margin-top: 15px;
   border: none;
   border-radius: 4px;
-  margin-top: 15px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 button:hover {
   background-color: #0056b3;
+}
+
+footer {
+  margin-top: 100px;
 }
